# agent-factory

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Makefile  PREFLIGHT_CHECK.tmp  README.md  capability_registry.yaml  docker-compose.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0cf581260d39_users_escaped_defects_ticket_created_at.py  a1b2c3d4e5f6_add_in_review_ticket_state.py  a2b3c4d5e6f7_billing_metering.py  a7b8c9d0e1f2_add_agent_runs_prompt_version.py  b2c3d4e5f6a7_add_orgs_and_org_id.py  b3c4d5e6f7a8_onboarding_abuse.py  b8c9d0e1f2a3_add_owner_member_user_roles.py  c3d4e5f6a7b8_add_edit_event_kind.py  c7cefaf17891_tickets_ticket_events_approvals.py  c9d0e1f2a3b4_multi_tenancy_core.py  d1e2f3a4b5c6_byok_provider_router.py  d4e5f6a7b8c9_add_assignment_event_kind.py  e5f6a7b8c9d0_add_review_event_kind_and_approval_gate.py  e6f7a8b9c0d1_github_repos.py  e9be75d61d32_agent_runs_cost_ledger.py  f1a2b3c4d5e6_org_egress_rules.py  f6a7b8c9d0e1_add_merge_queue_entries.py
apps/api/scripts/: e2e-server.sh  run_billing_metering.py
apps/api/src/api/: artifact_storage.py  auth.py  billing_plans.py  capability_registry.py  contracts.py  eval_floors.py  github_app_client.py  main.py  razorpay_client.py  tenancy.py  tos.py  vault_client.py
apps/api/src/api/db/: models.py  session.py
apps/api/src/api/domain/: state_machine.py
apps/api/src/api/repositories/: abuse_repository.py  agent_run_repository.py  billing_repository.py  dashboard_repository.py  egress_repository.py  funnel_repository.py  intake_repository.py  org_repository.py  provider_eval_opt_in_repository.py  provider_key_repository.py  repo_repository.py  ticket_repository.py  tos_repository.py  user_repository.py
apps/api/src/api/routers/: abuse.py  admin.py  agent_runs.py  artifacts.py  auth.py  billing.py  capability_registry.py  dashboard.py  egress.py  eval_floors.py  intake_reviews.py  merge_queue.py  orgs.py  provider_keys.py  repos.py  tickets.py  tos.py  webhooks.py  ws_tickets.py
apps/api/src/api/services/: abuse_service.py  agent_run_service.py  billing_service.py  dashboard_service.py  eval_floors_service.py  failure_distiller.py  github_repo_service.py  github_webhook_service.py  intake_screening_service.py  intake_service.py  onboarding_service.py  org_service.py  provider_health_service.py  provider_key_service.py  ticket_service.py  user_service.py  webhook_service.py
apps/api/src/api/ws/: broadcaster.py
apps/api/tests/: test_billing_plans.py  test_failure_distiller.py  test_github_app_client.py  test_github_app_client_http.py  test_health.py  test_intake_screening_service.py  test_razorpay_client_http.py
apps/api/tests/domain/: test_state_machine.py
apps/api/tests/integration/: conftest.py  test_agent_runs_api.py  test_artifact_storage.py  test_auth_api.py  test_billing_dunning.py  test_billing_metering_job.py  test_billing_plan_changes.py  test_billing_reconciliation.py  test_billing_router.py  test_byok_attribution.py  test_ci_webhook_api.py  test_cost_rollup_api.py  test_dashboard_api.py  test_delivery_manager_gates.py  test_egress_router.py  test_escalation_api.py  test_eval_floors_router.py  test_free_tier_usage_cap.py  test_funnel_dashboard.py  test_github_repo_fixture_provisioning.py  test_github_webhook_router.py  test_idea_planning_workflow.py  test_intake_review_flow.py  test_login_membership_resolution.py  test_merge_queue_api.py  test_migration_replay.py  test_onboarding_status.py  test_org_quota.py  test_org_strikes.py  test_provider_key_router.py  test_provider_key_validation_skip.py  test_redaction.py  test_repo_router.py  test_review_gate.py  test_staff_impersonation.py  test_tenant_isolation.py  test_ticket_events_api.py  test_ticket_repository.py  test_tickets_api.py  test_tickets_ws.py  (+2 more)
apps/orchestrator/: README.md  pyproject.toml
apps/orchestrator/fixtures/add_health_endpoint/: transcript.jsonl
apps/orchestrator/fixtures/add_health_endpoint/workspace_diff/: app.py  test_app.py
apps/orchestrator/fixtures/e2e_backend_task/: transcript.jsonl
apps/orchestrator/fixtures/e2e_backend_task/workspace_diff/: backend.py
apps/orchestrator/fixtures/e2e_frontend_task/: transcript.jsonl
apps/orchestrator/fixtures/e2e_frontend_task/workspace_diff/: frontend.py
apps/orchestrator/scripts/: check_threshold_governance.py  pilot_tickets.py  run_dispatcher.py  run_pilot.py
apps/orchestrator/src/orchestrator/: api_client.py  capability_registry.py  claude_runner.py  config.py  dispatch_gate.py  fixture_runner.py  git_ops.py  github_client.py  json_utils.py  merge_queue.py  prompt_version.py  sandbox_runner.py
apps/orchestrator/src/orchestrator/agents/: delivery_manager.py  dev.py  planner.py  prompt.py  (+1 more)
apps/orchestrator/tests/: test_claude_runner.py  test_config.py  test_dispatch_gate.py  test_git_ops.py  test_github_client.py  test_sandbox_runner.py
apps/orchestrator/tests/evals/: test_cost_isolation.py  test_dev_scorer.py  test_distiller_scorer.py  test_judge.py  test_loader.py  test_planner_scorer.py
apps/orchestrator/tests/integration/: conftest.py  test_delivery_manager_agent.py  test_dev_agent.py  test_e2e_management_flow.py  test_e2e_onboarding_flow.py  test_github_app_connected_repo_flow.py  test_merge_queue.py  test_multi_org_dispatch.py  test_planner_agent.py  test_review_agent.py
apps/sandbox/: README.md  pyproject.toml
apps/sandbox/hooks/: pre-push
apps/sandbox/images/: Dockerfile
apps/sandbox/src/sandbox/: cli.py  config.py  credential_broker.py  docker_runtime.py  egress_forwarder.py  egress_proxy.py  events_client.py  pool.py  runtime.py  scheduler.py  worktree.py
apps/sandbox/tests/integration/: conftest.py  test_escape_probes.py  test_exec_stream.py  test_pool_load.py  test_sandbox_lifecycle.py
apps/sandbox/tests/unit/: test_credential_broker.py  test_egress_forwarder.py  test_egress_proxy.py  test_events_client.py  test_microvm_runtime.py  test_pool_prewarm_logic.py  test_scheduler_property.py
(+213 files in other folders)
