[project]
name = "agent-factory-api"
version = "0.1.0"
description = "Agent Factory ticket API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "authlib>=1.3,<2.0",
  "pyjwt>=2.9,<3.0",
  "itsdangerous>=2.2,<3.0",
  # authlib.integrations.starlette_client imports httpx at module load time (the OIDC
  # client's transport) — a real runtime dependency, not just a test one. Easy to miss
  # locally since the dev venv always installs [dev] (which also lists it) regardless.
  "httpx>=0.27,<1.0",
  # T-104 (SPEC-103): reads capability_registry.yaml to enforce per-profile/per-repo
  # capacity during a ready->in_progress transition.
  "pyyaml>=6.0,<7.0",
  # T-202 (SPEC-202): Vault KV v2 client for BYOK provider keys.
  "hvac>=2.1,<3.0",
  # T-202: provider_key_service.py's validate-on-save ping is the one, disclosed,
  # narrow exception to "provider SDKs live only in packages/llm_router" — see
  # scripts/check_llm_router_gate.py's _ALLOWLISTED_FILES and that service's docstring.
  "anthropic>=0.40,<1.0",
  "openai>=1.40,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "testcontainers[postgres]>=4.8,<5.0",
  "types-PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends()/Query() *must* live in argument defaults — that's the framework's DI idiom.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hvac.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
