[project]
name = "agent-factory-orchestrator"
version = "0.1.0"
description = "Ticket orchestration: dev agent integration (SPEC-004)"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1.0",
  # T-101 (SPEC-101): the eval harness calls Anthropic directly (haiku judge + the
  # distiller's eval-only LLM path), logs runs to Langfuse Cloud, and loads
  # evals/**/*.yaml case files.
  "anthropic>=0.40,<1.0",
  "langfuse>=4.0,<5.0",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  # T-101: evals/dev's "standalone" (synthetic) cases run under this venv directly (see
  # orchestrator/evals/dev_scorer.py) - flask is the toy web framework a few of them use.
  "flask>=3.0,<4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "langfuse.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
