[project]
name = "agent-factory-sandbox"
version = "0.1.0"
description = "Per-task sandbox runner: isolated container, egress proxy, git worktree, credential broker"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.scripts]
sandbox = "sandbox.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
